# str_view

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Config.cmake.in  DOXYGEN_README.md  Doxyfile  INSTALL.md  LICENSE  Makefile  README.md  annotated.html  annotated_dup.js  classes.html  dir_c0a9194a9d1810f5b7b1f18d57ea0ad0.html  dir_c0a9194a9d1810f5b7b1f18d57ea0ad0.js  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  graph_legend.html  index.html  md_INSTALL.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  str__view_8h.html  str__view_8h.js  str__view_8h__incl.map  str__view_8h__incl.md5  (+3 more)
.github/workflows/: clang_tidy.yml  clang_tidy_post.yml  linux_build.yml  mac_build.yml  release.yml  windows_build.yml
cmake/: Installing.cmake
docs/: .gitignore  DoxygenLayout.xml
etc/: scanners.cmake
include/: str_view.h
lib/: CMakeLists.txt  string_view.c  string_view.h
lib/util/: CMakeLists.txt  sv_len.c  sv_memcmp.c  sv_memcpy.c  sv_memmove.c  sv_memset.c  sv_nlen.c  sv_strcspn.c  sv_strlen.c  sv_strnlen.c  sv_strstr.c  sv_util.h
samples/: CMakeLists.txt  main.c  mini_grep.c
search/: all_1.js  all_2.js  classes_0.js  defines_0.js  enums_0.js  files_0.js  functions_0.js  pages_0.js  pages_1.js  searchdata.js  variables_1.js
source/: str_view.c
src/: CMakeLists.txt  main.c
str_view/: .clang-tidy  CMakeLists.txt  str_view.c  str_view.h
str_view/util/: sv_strspn.c  sv_strstr.c  sv_util.h
tests/: CMakeLists.txt  run_tests.c  test.h  test_comparisons.c  test_constructors.c  test_copy_fill.c  test_empty.c  test_iterators.c  test_length_vs_bytes.c  test_out_of_bounds.c  test_str_positions.c  test_string_searching.c  test_view_editing.c  tests.c
